--- a/Frontend/App/App.csproj
+++ b/Frontend/App/App.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Refit" Version="6.0.15" />
+    <PackageReference Include="Refit.HttpClientFactory" Version="6.0.15" />
+  </ItemGroup>
+
 </Project>
