--- a/Frontend/App/Properties/launchSettings.json
+++ b/Frontend/App/Properties/launchSettings.json
@@ -19,7 +19,8 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:8081;http://localhost:8080",
+      "UrlAPI": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
